browser/themes/shared/customizableui/customizeMode.inc.css
/* ... */
#
customization
-
lwtheme
-
menu
-
header
{
margin
-
top
:
-
10px
;
}
#
customization
-
lwtheme
-
menu
-
recommended
{
border
-
top
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
}
#
customization
-
lwtheme
-
menu
-
footer
{
background
:
linear
-
gradient
(
var
(
-
-
arrowpanel
-
dimmed
)
60
%
transparent
)
border
-
box
;
border
-
top
:
1px
solid
var
(
-
-
arrowpanel
-
dimmed
)
;
margin
-
bottom
:
-
10px
;
}
.
customization
-
lwtheme
-
menu
-
footeritem
{
-
moz
-
appearance
:
none
;
-
moz
-
box
-
flex
:
1
;
color
:
inherit
;
border
-
style
:
none
;
padding
:
10px
;
margin
-
left
:
0
;
margin
-
right
:
0
;
}
.
customization
-
lwtheme
-
menu
-
footeritem
:
hover
{
background
:
linear
-
gradient
(
var
(
-
-
arrowpanel
-
dimmed
)
40
%
transparent
)
padding
-
box
;
}
.
customization
-
lwtheme
-
menu
-
footeritem
:
first
-
child
{
border
-
inline
-
end
:
1px
solid
var
(
-
-
panel
-
separator
-
color
)
;
}
#
customization
-
panelWrapper
>
.
panel
-
arrowcontent
{
color
:
var
(
-
-
arrowpanel
-
color
)
;
background
:
var
(
-
-
arrowpanel
-
background
)
;
background
-
clip
:
padding
-
box
;
%
ifdef
XP_MACOSX
border
:
1px
solid
var
(
-
-
arrowpanel
-
dimmed
-
even
-
further
)
;
box
-
shadow
:
0
4px
10px
hsla
(
0
0
%
0
%
.
3
)
;
-
moz
-
appearance
:
none
;
border
-
radius
:
var
(
-
-
arrowpanel
-
border
-
radius
)
;
%
else
border
:
1px
solid
var
(
-
-
arrowpanel
-
border
-
color
)
;
box
-
shadow
:
0
0
4px
hsla
(
0
0
%
0
%
.
2
)
;
%
endif
}
#
customization
-
panelWrapper
>
.
panel
-
arrowbox
{
position
:
relative
;
height
:
10px
;
margin
-
bottom
:
-
1px
;
}
#
nav
-
bar
[
customizing
]
>
.
overflow
-
button
{
fill
:
hsla
(
0
0
%
30
%
.
4
)
;
}
#
nav
-
bar
[
customizing
]
>
.
overflow
-
button
>
.
toolbarbutton
-
icon
{
background
-
color
:
var
(
-
-
toolbarbutton
-
active
-
background
)
;
opacity
:
1
;
}
#
customization
-
panelWrapper
>
.
panel
-
arrowbox
>
.
panel
-
arrow
[
side
=
"
top
"
]
{
%
ifdef
XP_MACOSX
list
-
style
-
image
:
var
(
-
-
panel
-
arrow
-
image
-
vertical
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
panelarrow
-
vertical
.
png
"
)
)
;
padding
:
0
1px
;
width
:
20px
;
%
else
list
-
style
-
image
:
var
(
-
-
panel
-
arrow
-
image
-
vertical
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
panelarrow
-
vertical
-
themed
.
svg
"
)
)
;
%
endif
margin
-
inline
-
end
:
calc
(
9px
+
3
*
var
(
-
-
toolbarbutton
-
inner
-
padding
)
)
;
vertical
-
align
:
top
;
}
%
ifdef
XP_MACOSX
media
(
min
-
resolution
:
2dppx
)
{
#
customization
-
panelWrapper
>
.
panel
-
arrowbox
>
.
panel
-
arrow
[
side
=
"
top
"
]
{
list
-
style
-
image
:
var
(
-
-
panel
-
arrow
-
image
-
vertical
url
(
"
chrome
:
/
/
global
/
skin
/
arrow
/
panelarrow
-
vertical
2x
.
png
"
)
)
;
}
}
%
endif
#
customization
-
panelHolder
>
#
widget
-
overflow
-
fixed
-
list
:
not
(
:
empty
)
{
padding
-
bottom
:
50px
;
}
#
customization
-
panelHolder
>
#
widget
-
overflow
-
fixed
-
list
:
empty
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
customizableui
/
empty
-
overflow
-
panel
.
png
"
)
;
background
-
position
:
center
top
10px
;
background
-
size
:
218px
134px
;
background
-
repeat
:
no
-
repeat
;
}
#
customization
-
panelHolder
>
#
widget
-
overflow
-
fixed
-
list
:
empty
:
:
after
{
content
:
attr
(
emptylabel
)
;
padding
:
154px
10px
10px
;
text
-
align
:
center
;
display
:
block
;
}
media
(
min
-
resolution
:
1
.
1dppx
)
{
#
customization
-
panelHolder
>
#
widget
-
overflow
-
fixed
-
list
:
empty
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
customizableui
/
empty
-
overflow
-
panel
2x
.
png
"
)
;
}
}
#
downloads
-
button
-
autohide
-
panel
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
5px
12px
;
}
#
downloads
-
button
-
autohide
-
checkbox
{
margin
:
0
;
padding
:
0
;
}

