Bug 1402311 - use fill-opacity instead of hardcoded fill colour for disabled overflow button in customize mode, r=dao
MozReview-Commit-ID: JKeA5ZNAh5J

UltraBlame original commit: 69dfc35d912dfaa096f9e9d66cda13ef60babe38

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -2973,33 +2973,6 @@ customizing
 overflow
 -
 button
-{
-fill
-:
-hsla
-(
-0
-0
-%
-30
-%
-.
-4
-)
-;
-}
-#
-nav
--
-bar
-[
-customizing
-]
->
-.
-overflow
--
-button
 >
 .
 toolbarbutton
@@ -3024,6 +2997,14 @@ background
 opacity
 :
 1
+;
+fill
+-
+opacity
+:
+0
+.
+4
 ;
 }
 #
